src/test/ui/stability-attribute/stability-attribute-implies-using-unstable.stderr
error: the feature `foo` has been stable since 1.62.0 and no longer requires an attribute to enable
  --> $DIR/stability-attribute-implies-using-unstable.rs:3:12
   |
LL | #![feature(foo)]
   |            ^^^
   |
note: the lint level is defined here
  --> $DIR/stability-attribute-implies-using-unstable.rs:2:9
   |
LL | #![deny(stable_features)]
   |         ^^^^^^^^^^^^^^^

error: aborting due to previous error

